adding proxy build args

--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -13,8 +13,8 @@ ARG HTTPS_PROXY=""
 
 ADD $OVERRIDE /
 
-EXPORT HTTP_PROXY=${HTTP_PROXY}
-EXPORT HTTPS_PROXY=${HTTPS_PROXY}
+ENV HTTP_PROXY=${HTTP_PROXY}
+ENV HTTPS_PROXY=${HTTPS_PROXY}
 
 RUN set -x \
     && apt-get update \
