adding proxy build args

--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -8,13 +8,12 @@ ARG PROJECT_REF=master
 ARG SCRIPTS_REPO=https://github.com/openstack/loci
 ARG SCRIPTS_REF=master
 ARG OVERRIDE=override
-ARG HTTP_PROXY=""
-ARG HTTPS_PROXY=""
+ARG PROXY
 
 ADD $OVERRIDE /
 
-ENV HTTP_PROXY=${HTTP_PROXY}
-ENV HTTPS_PROXY=${HTTPS_PROXY}
+ENV HTTP_PROXY=$PROXY
+ENV HTTPS_PROXY=$PROXY
 
 RUN set -x \
     && apt-get update \
