--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -27,3 +27,5 @@ RUN set -x \
     && git --git-dir /tmp/common/.git fetch --depth 1 $SCRIPTS_REPO $SCRIPTS_REF \
     && git --work-tree /tmp/common --git-dir /tmp/common/.git checkout FETCH_HEAD \
     && /tmp/common/scripts/install.sh
+
+RUN /var/lib/openstack/bin/pip install oslo.messaging==5.29.0
